# RoomEdit

./: AUTHORS  CMakeLists.txt  README.md  RoomEdit.kdev4  RoomEdit.pro  build.pro  glwidget.cpp  glwidget.h  main.cpp  qtlogo.cpp  window.cpp  window.h
data/examples/: room1.r3d  room2.r3d
data/models/: armchair.3ds  bin.3ds  bin2.3ds  board.3ds  bookcase.3ds  chair.3ds  computer.3ds  door.3ds  locker.3ds  shelf.3ds  table.3ds  table2.3ds  table2comp.3ds
editor/: CMakeLists.txt  RCamera.h  RConfig.cpp  RConfig.h  REditObj.cpp  REditObj.h  REditor.cpp  REditor.h  RGrid.cpp  RGrid.h  RGridObj.cpp  RGridObj.h  RModel3DS.cpp  RModel3DS.h  RObjRoom.cpp  RObjRoom.h  RObjSelection.cpp  RObjSelection.h  RProject.cpp  RProject.h  RResourceDB.cpp  RResourceDB.h  RSceneObj.cpp  RSceneObj.h  RTexture.cpp  RTexture.h  Vector.h  editor.pro  editor_resources.qrc  global.h  main.cpp
editor/GUI/: REditWnd.cpp  REditWnd.h  REditorWnd.cpp  REditorWnd.h  RLogger.cpp  RLogger.h  RMainWnd.cpp  RMainWnd.h  RSceneObjPicker.cpp  RSceneObjPicker.h
